# equipment_api

./: .dockerignore  Makefile  README.md  docker-compose.yml  pytest.ini
config/db/: .env
config/db/docker-entrypoint-initdb.d/: test_db_access.sql
config/django/: .env  .env.example
src/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
src/equipment_api/: asgi.py  settings.py  urls.py  wsgi.py
src/fixture/: all.json
src/main/: models.py  pattern_convert.py  serializers.py  urls.py  views.py
src/main/migrations/: 0001_initial.py  0002_alter_eqpt_serial_number_alter_eqpttype_mask_and_more.py  0003_eqpt_deleted_alter_eqpt_serial_number.py
src/tests/unit/: test_convert_pattern.py  test_eqpt.py  test_eqptype.py
